[package]
name = "vault-mgmt"
version = "0.1.0"
edition = "2021"

[lib]
name = "vault_mgmt"
path = "src/lib.rs"

[[bin]]
name = "vault-mgmt-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.7.7"
tokio-rustls = { version = "0.24.0", features = ["dangerous_configuration"] }
hyper = { version = "0.14.25", features = ["backports"] }
hyper-rustls = "0.24.0"
tower = "0.4.13"
futures-util = "0.3.27"
kube = { version = "0.81.0", default-features = false, features = [
    "client",
    "config",
    "runtime",
    "rustls-tls",
    "derive",
    "ws",
] }
k8s-openapi = { version = "0.17.0", features = ["v1_24"] }
serde_json = "1.0.94"
secrecy = { version = "0.8.0", features = ["serde"] }
prettytable = "0.10.0"
owo-colors = { version = "3", features = ["supports-colors"] }
serde_yaml = "0.9.21"
which = "4.4.0"
rand = "0.8.5"
serde = "1.0.160"
tower-test = "0.4.0"
http = "0.2.9"
async-trait = "0.1.68"
wiremock = "0.5.18"
